[project]
name = "ray-learning"
version = "0.1.0"
description = "Learning Ray distributed computing framework"
authors = [{ name = "Hank", email = "Engalpha@node-health.com" }]
requires-python = ">=3.11"
dependencies = [
    "ray[default] (>=2.51.1,<3.0.0)",
    "ipykernel (>=7.1.0,<8.0.0)",
    "numpy (>=2.3.4,<3.0.0)",
    "filelock (>=3.20.0,<4.0.0)",
    "ipywidgets (>=8.1.8,<9.0.0)"
]

[tool.package]
package-mode = false

[tool.poetry.group.windows.dependencies]
# Windows 專用依賴
torch = { url = "https://download.pytorch.org/whl/cu124/torch-2.4.0%2Bcu124-cp311-cp311-win_amd64.whl#sha256=b1d40a13a6fd3f92aa5728ab84756571381b6b1ccae7ce62037c28d539687c25" }
torchaudio = { url = "https://download.pytorch.org/whl/cu124/torchaudio-2.4.0%2Bcu124-cp311-cp311-win_amd64.whl#sha256=12f7f2b1c0fb435875175247083c8aca056face6bc5388b9a494a90ca197632c" }
torchvision = { url = "https://download.pytorch.org/whl/cu124/torchvision-0.19.0%2Bcu124-cp311-cp311-win_amd64.whl#sha256=42ac55c0fd1cdea14c20168f0b24eba7fc2d2eb4ef75196ded7b76f81dee619f" }
# PyQt5 = { url = "https://files.pythonhosted.org/packages/ca/ac/596e8ca16fd0634542d874c0d79219fc527ea7de73a5000092f60ecbf6e9/PyQt5-5.15.10-cp37-abi3-win_amd64.whl" }
# PyQt5-Qt5 = { url = "https://files.pythonhosted.org/packages/py3/P/PyQt5_Qt5/PyQt5_Qt5-5.15.2-py3-none-win_amd64.whl" }


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
